--- a/src/lstm_crf/models/config.yml
+++ b/src/lstm_crf/models/config.yml
@@ -1,6 +1,6 @@
 embedding_size: 768
 hidden_size: 128
-model_path: models/
+model_path: /workspace/project_swq/albert_lstm_crf_ner/src/lstm_crf/models/
 batch_size: 64
 max_length: 128
 dropout: 0.5
